--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Your Name / Site Title"
+title                    : "Constantinos PApi"
 title_separator          : "-"
 name                     : &name "Constantinos Papi"
 description              : &description "Here is my description COnsta"   # Update this with a general description of your site, this is the default if not overridden by a page
